# libws

./: README  configure.ac
src/: .project  Makefile.am  main.c  web_sockets.c  web_sockets.h  web_sockets.rl  web_sockets_parse.c  web_sockets_parse.h  web_sockets_parser.c  web_sockets_parser.h  web_sockets_parser_internal.h  web_sockets_parser_parse.c  web_sockets_parser_parse.rl  ws.c  ws.rl
tests/: Makefile.am  check_ws.c
tests/web_sockets/: Makefile.am  check_web_sockets.c  check_web_sockets.h
tests/ws_parser/: Makefile.am  check_parser.c  check_ws_parser.c  check_ws_parser.h
